# pr2_hardware

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  stack.xml
include/pr2_hardware/: controller_manager.h  pr2_hardware.h
pr2_hardware/: CMakeLists.txt  manifest.xml
pr2_hardware/include/pr2_hardware/: controller_manager.h  pr2_hardware.h
pr2_hardware/scripts/: pr2_controller_manager_adapter.py
pr2_hardware/src/: controller_manager.cpp
pr2_hardware_tests/: CMakeLists.txt  mainpage.dox  manifest.xml
pr2_hardware_tests/src/: pr2_cm_dummy.cpp
scripts/: pr2_controller_manager_adapter.py
src/: controller_manager.cpp
test/: pr2_cm_dummy.cpp
